<resources>
    <string name="app_name">My Restaurants</string>
    <string name="backend_editor">Backend editor</string>
    <string name="add_new_item">Add New Item</string>
    <string name="description">Description</string>
    <string name="get_item_by_name">Get Item by name</string>
    <string name="image_source">Image Source</string>
    <string name="imagesource">ImageSource</string>
    <string name="name">Name</string>
    <string name="delete_by_name">Delete by name</string>
    <string name="update">Update</string>
    <string name="you_should_update_your_app">You should update your App</string>
    <string-array name="main_menu">
        <item>Drink</item>
        <item>Food</item>
        <item>Stores</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
